# cargox

./: Cargo.toml  LICENSE-APACHE  README.md  TESTING.md
.github/workflows/: ci.yml
scripts/: release.py
src/: cli.rs  executor.rs  installer.rs  main.rs  paths.rs  registry.rs  target.rs  versions.rs
tests/: help_flag.rs
