[package]
name = "cargox-cli"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/mxcl/cargox"
description = "Run Cargo binaries on demand, installing them via cargo-binstall when missing."
license = "Apache-2.0"

[[bin]]
name = "cargox"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.dist]
release_name = "cargox"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
which = "6.0"
directories = "5.0"
tempfile = "3.14"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }

[workspace.metadata.dist]
cargo-dist-version = "0.24.1"
ci = "github"
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
]
